Fixed z-index for slideshow, navbar and logo

--- a/website/blog/static/blog/main.css
+++ b/website/blog/static/blog/main.css
@@ -276,91 +276,6 @@ margin:0% 3%;
   white-space: pre-wrap;
 }
 
-/* .home-page-slideshow { */
-  /* display: flex; Use flexbox for layout */
-/* } */
-
-/* .home-page-slideshow img { */
-  /* max-width: 100%; Ensure images don't exceed container width */
-  /* display: none; Hide images initially */
-/* } */
-
-.slowfade-wrapper{
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 50%;
-}
-
-.slowFade {
-  display: flex;
-  /*justify-content: center; /* Center horizontally */
-  /* align-items: center; Center vertically */
-  align-items: flex-start;
-  background: #7A8C95;
-  height: 50vh;
-  overflow: hidden;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-.slowFade .slide img {
-  position: absolute;
-  min-width: 100%;
-  max-height: 100%;
-  background: #000;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  opacity: 0;
-  transform: scale(1.5) rotate(15deg);
-  -webkit-animation: slowFade 32s infinite;
-          animation: slowFade 32s infinite;
-}
-.slowFade .slide:nth-child(6) img {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-}
-.slowFade .slide:nth-child(5) img {
-  -webkit-animation-delay: 8s;
-          animation-delay: 8s;
-}
-.slowFade .slide:nth-child(4) img {
-  -webkit-animation-delay: 16s;
-          animation-delay: 16s;
-}
-.slowFade .slide:nth-child(3) img {
-  -webkit-animation-delay: 24s;
-          animation-delay: 24s;
-}
-.slowFade .slide:nth-child(2) img {
-  -webkit-animation-delay: 32s;
-          animation-delay: 32s;
-}
-.slowFade .slide:nth-child(1) img {
-  -webkit-animation-delay: 40s;
-          animation-delay: 40s;
-}
-@keyframes slowFade {
-  25% {
-      opacity: 1;
-      transform: scale(1) rotate(0);
-  }
-  40% {
-      opacity: 0;
-  }
-}
-@-webkit-keyframes slowFade {
-  25% {
-      opacity: 1;
-      transform: scale(1) rotate(0);
-  }
-  40% {
-      opacity: 0;
-  }
-}
-
-
 .omgeving-container {
   display: flex;
   flex-direction: column;
@@ -398,6 +313,7 @@ margin:0% 3%;
   top: 40%; /* Center vertically */
   left: 50%; /* Center horizontally */
   transform: translate(-50%, -50%); /* Center the element precisely */
+  z-index: -1;
 }
 
 /* Slowfade fullscreen*/
@@ -409,7 +325,7 @@ margin:0% 3%;
   overflow: hidden;
   position: relative;
   margin-top: -4em;
-  z-index: -1;
+  z-index: -10;
 }
 .slowFadeFullscreen .slideFullscreen img {
   position: absolute;
